{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "6fd0ee73-53c5-41a7-84e5-4fcaf4d46a80",
            "actions": [
                {
                    "name": "TouchScreenPosition",
                    "type": "Value",
                    "id": "3990eea6-3651-4d12-abb9-1139616bb2f6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchScreenPress",
                    "type": "Button",
                    "id": "8c14ceb3-fc89-4336-a52c-64f32221ecf5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "c747eb31-65f4-40e8-b71d-60b26557376b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseLeftButtonPress",
                    "type": "Button",
                    "id": "f35e4cfd-86f2-4336-92c7-40bb1d02704e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "03e24554-c2dc-41b9-851d-d5bf0f5854cb",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchScreenPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f5a5c172-6cea-46cf-ace0-86e2dab44f26",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchScreenPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c9870ba-9631-4154-a7cb-38bba2ca1a3b",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "990f2e3a-7ce6-4706-97d9-216b4a92d9c0",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeftButtonPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}